# chimaerad

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  ChimaeraD  ChimaeraD.bat  README.md  chimaerad.app  chimaerad.c  chimaerad.h  chimaerad.js  chimaerad.lua  chimaerad_client.c  chimaerad_discover.c  chimaerad_dummy.c  chimaerad_dummy.lua  chimaerad_host.c  chimaerad_http.c  chimaerad_http.lua  chimaerad_source.c  content.html  dummy.lua  index.html  main.lua  mod_dns_sd.c  mod_http.c  mod_iface.c  mod_jack_cv.c  mod_jack_midi.c  mod_jack_osc.c  mod_json.c  mod_osc.c  mod_osc_common.c  mod_osc_common.h  mod_osc_stream.c  mod_rtmidi.c  mod_rtmidi.cpp  mod_zip.c  not_found.html  (+3 more)
ace/: ace.js  mode-lua.js  theme-clouds_midnight.js  worker-lua.js
app/: calibration.html  chimaerad.js  class.lua  cv_out.lua  device.html  dns_sd.lua  dummy.lua  httpd.lua  index.html  interfaces.html  main.html  main.lua  map.lua  midi_out.lua  osc_out.lua  osc_responder.lua  ports.html  rest_responder.lua  style.css  tuio2_fltr.lua
app/ace/: mode-lua.js  theme-clouds_midnight.js  worker-lua.js
cmake/: arm-linux-gnueabihf.cmake  i686-linux-gnu.cmake  i686-w64-mingw32.cmake  universal-apple-darwin.cmake  x86_64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
inlist/: inlist.h
